--- a/lavas/static/manifest.json
+++ b/lavas/static/manifest.json
@@ -1,6 +1,6 @@
 {
     "start_url": "/?utm_source=homescreen",
-    "name": "*__name__*",
+    "name": "test",
     "short_name": "*__name__*",
     "icons": [
         {
